--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -29,7 +29,7 @@ import LanderBG from "../components/lander-bg.svelte"
         <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg"/>
         <Student name="Sutanwika Das" tag="Artist, Yogini" image="./sutanwika.jpg"/>
         <Student name="Suvam Mondol" tag="Artist, Musician"/>
-        <Student name="Hanny Mahli" tag="Poet, Editor" image="hanny.jpg"/>
+        <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg"/>
         <Student name="Ankan Singh" tag="Artist"/>
 
     </div>
