Logo, Favicon anf Footer

--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,7 +1,9 @@
 <header>
   <div class="logo">
-    <!-- Temporary Placeholder -->
-    Class 8B
+    <a href="." >
+      <img src="./logo.png" alt="" class="size-24 cursor-pointer">
+
+    </a>
   </div>
   <nav class=".nav">
     <a href="./talents">Our Talents</a>
@@ -32,6 +34,7 @@
     gap:clamp(2px,2vw,20px);
     font-size:clamp(0px,3vw,16px);
     color:var(--darker-primary);
+    font-family: "Alex Brush";
 
   }
   .logo {
