Semi Final Version

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,7 +2,7 @@
 import "../styles/global.css"
 ---
 <footer class="w-screen mt-10 border-t-2 border-t-[var(--secondry-color)] h-auto bg-[var(--background)] flex flex-col items-center justify-center">
-<span class="text text-lg font-alex text-[var(--darker-primary)] ">Made by yours truly <a href="utkarshchandel.vercel.app"> <strong>Utkarsh Chandel</strong></a></span>
+<span class="text text-lg font-alex text-[var(--darker-primary)] ">Made by yours truly <a href="https://utkarsh-chandel.vercel.app" target="_blank"> <strong>Utkarsh Chandel</strong></a></span>
 <span class="text text-lg font-alex text-[var(--darker-primary)] ">Logo by <strong>Sutanwika Das</strong></span>
 <span class="text text-lg font-alex text-[var(--darker-primary)] ">By the help of the whole class 8B</span>
 
