--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -9,7 +9,7 @@
     <a href="./talents">Our Talents</a>
     <a href="">Class Magazine</a>
     <a href="">Yearbook</a>
-    <a href="">Student List</a>
+    <a href="./student-list">Student List</a>
   </nav>
 </header>
 <style is:global>
