--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -26,11 +26,11 @@ import Footer from "../components/footer.astro"
         <Student name="Utkarsh Chandel" tag="Athlete, Topper, Poet, Musician, Devloper" fontSize="10px" image="./utkarsh.jpg"/>
         <Student name="Aarav Kumar" tag="Artist, Vocalist"/>
         <Student name="Prince Kumar" tag="Athlete"/>
-        <Student name="Jiger Kumar" tag="Athlete"/>
+        <Student name="Jigar Kumar" tag="Athlete" image="jigar.jpeg"/>
         <Student name="Surjosnata Sinha Roy" tag="Poet, Editor" image="./surjo.jpg"/>
+        <Student name="Srishti Mondol" tag="Artist, Editor, Poet" image="./srishti.jpg"/>
         <Student name="Sutanwika Das" tag="Artist, Yogini" image="./sutanwika.jpg"/>
         <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg"/>
-        <Student name="Srishti Mondol" tag="Artist, Editor" image="./srishti.jpg"/>
         <Student name="Suvam Mondol" tag="Artist, Musician"/>
         <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg"/>
         <Student name="Ankan Singh" tag="Artist"/>
