--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -31,7 +31,7 @@ import Footer from "../components/footer.astro"
         <Student name="Srishti Mondol" tag="Artist, Editor, Poet" image="./srishti.jpg"/>
         <Student name="Sutanwika Das" tag="Artist, Yogini" image="./sutanwika.jpg"/>
         <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg"/>
-        <Student name="Suvam Mondol" tag="Artist, Musician"/>
+        <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.jpg"/>
         <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg"/>
         <Student name="Ankan Singh" tag="Artist"/>
 
