--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,7 +125,7 @@ import { ClientRouter } from 'astro:transitions';
       <h2 class="text-[var(--darker-primary)]">Lead By</h2>
       <StudentCard name="Class Teacher" tag="Akash Debnath Sir"/>
       <div class="grid grid-cols-2 grid-rows-3 gap-10 pt-10 md:grid-rows-2 md:grid-cols-3">
-        <StudentCard name="Girls Monitor 1" tag="Sonakshi Suman"/>
+        <StudentCard name="Girls Monitor 1" tag="Sonakshi Suman" image="sonakshi.jpg"/>
         <StudentCard name="Boys Monitor 1" tag="Utkarsh Chandel" image="utkarsh.jpg"/>
         <StudentCard name="Girls Monitor 2" tag="Pratyusha Joshi"/>
         <StudentCard name="Boys Monitor 2" tag="Jigar Kumar" image="jigar.jpeg"/>
