--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,9 +127,9 @@ import { ClientRouter } from 'astro:transitions';
       <div class="grid grid-cols-2 grid-rows-3 gap-10 pt-10 md:grid-rows-2 md:grid-cols-3">
         <StudentCard name="Girls Monitor 1" tag="Sonakshi Suman" image="sonakshi.jpg"/>
         <StudentCard name="Boys Monitor 1" tag="Utkarsh Chandel" image="utkarsh.jpg"/>
-        <StudentCard name="Girls Monitor 2" tag="Pratyusha Joshi"/>
+        <StudentCard name="Girls Monitor 2" tag="Pratyusha Joshi" image="pratyusha.jpg"/>
         <StudentCard name="Boys Monitor 2" tag="Jigar Kumar" image="jigar.jpeg"/>
-        <StudentCard name="Girls Monitor 3" tag="Adrija Mondol"/>
+        <StudentCard name="Girls Monitor 3" tag="Adrija Mondol" image="adrija.jpg"/>
         <StudentCard name="Boys Monitor 3" tag="Suvam Mondol" image="suvam.jpg"/>
 
       </div>
