--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -1,55 +1,74 @@
 ---
-import Nav from "../components/nav.astro"
-import "../styles/global.css"
-import Student from "../components/student-card.svelte"
-import LanderBG from "../components/lander-bg.svelte" 
-import Footer from "../components/footer.astro"
+import Nav from "../components/nav.astro";
+import "../styles/global.css";
+import Student from "../components/student-card.svelte";
+import LanderBG from "../components/lander-bg.svelte";
+import Footer from "../components/footer.astro";
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Talents - Class 8B</title>
-</head>
-<body>
-    <Nav/>
-    <LanderBG client:only/>
-    <section class="talents pt-[110px] pl-3">
-    <h2 class="w-screen text-center">
-        Our Talents
-    </h2>
-    <div class="grid w-screen">
-        <Student name="Adrija Mondol" tag="Topper"/>
-        <Student name="Pratyusha Joshi" tag="Topper, Writer"/>
-        <Student name="Utkarsh Chandel" tag="Athlete, Topper, Poet, Musician, Devloper" fontSize="10px" image="./utkarsh.jpg"/>
-        <Student name="Aarav Kumar" tag="Artist, Vocalist"/>
-        <Student name="Prince Kumar" tag="Athlete"/>
-        <Student name="Jigar Kumar" tag="Athlete" image="jigar.jpeg"/>
-        <Student name="Surjosnata Sinha Roy" tag="Poet, Editor" image="./surjo.jpg"/>
-        <Student name="Srishti Mondol" tag="Artist, Editor, Poet" image="./srishti.jpg"/>
-        <Student name="Sutanwika Das" tag="Artist, Yogini" image="./sutanwika.jpg"/>
-        <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg"/>
-        <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.jpg"/>
-        <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg"/>
-        <Student name="Ankan Singh" tag="Artist"/>
 
-    </div>
+<!doctype html>
+<html lang="en">
+  <head>
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Our Talents - Class 8B</title>
+  </head>
+  <body>
+    <Nav />
+    <LanderBG client:only />
+    <section class="talents pt-[110px] h-screen pl-3">
+      <h2 class="w-screen text-center">Our Talents</h2>
+      <div class="grid w-screen">
+        <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Topper" image="adrija.jpg"/>
+        <Student
+          name="Pratyusha Joshi"
+          tag="Topper, Writer"
+          image="pratyusha.jpg"
+        />
+        <Student
+          name="Utkarsh Chandel"
+          tag="Athlete, Topper, Poet, Musician, Devloper"
+          fontSize="10px"
+          image="./utkarsh.jpg"
+        />
+        <Student name="Aarav Kumar" tag="Artist, Vocalist" />
+        <Student name="Prince Kumar" tag="Athlete" image="prince.jpg"/>
+        <Student name="Jigar Kumar" tag="Athlete" image="jigar.jpeg" />
+        <Student
+          name="Surjosnata Sinha Roy"
+          tag="Poet, Editor"
+          image="./surjo.jpg"
+        />
+        <Student
+          name="Srishti Mondol"
+          tag="Artist, Editor, Poet"
+          image="./srishti.jpg"
+        />
+        <Student
+          name="Sutanwika Das"
+          tag="Artist, Yogini"
+          image="./sutanwika.jpg"
+        />
+        <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg" />
+        <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.jpg" />
+        <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg" />
+        <Student name="Ankan Singh" tag="Artist" />
+      </div>
     </section>
-    <Footer/>
+    <Footer />
     <style>
-        h2{
-            font-family: "Alex Brush",cursive;
-            font-size:36px;
-            color:var(--darker-primary);
-        }
-        .grid{
-            display:grid;
-            grid-template-columns: repeat(auto-fit, 170px);
-            justify-content: center;
-            gap:20px;
-        }
+      h2 {
+        font-family: "Alex Brush", cursive;
+        font-size: 36px;
+        color: var(--darker-primary);
+      }
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 170px);
+        justify-content: center;
+        gap: 20px;
+      }
     </style>
-</body>
+  </body>
 </html>
