--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -17,7 +17,7 @@ import Footer from "../components/footer.astro";
   <body>
     <Nav />
     <LanderBG client:only />
-    <section class="talents pt-[110px] h-screen pl-3">
+    <section class="talents pt-[110px] min-h-screen pl-3">
       <h2 class="w-screen text-center">Our Talents</h2>
       <div class="grid w-screen">
         <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Topper" image="adrija.jpg"/>
