--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import LanderBG from "../components/lander-bg.svelte";
 import Footer from "../components/footer.astro"
 import StudentCard from "../components/student-card.svelte"
 import { ClientRouter } from 'astro:transitions';
-
+import Analytics from '@vercel/analytics/astro'
 ---
 
 <html lang="en">
@@ -18,6 +18,7 @@ import { ClientRouter } from 'astro:transitions';
     <ClientRouter transition:name="fade"/>
   </head>
   <body>
+    <Analytics/>
     <Nav />
     <LanderBG client:only />
     <section class="h-screen w-screen">
