--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -57,7 +57,7 @@ import Analytics from '@vercel/analytics/astro'
         <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg" />
         <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.jpg" />
         <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg" />
-        <Student name="Ankan Singh" tag="Artist" />
+        <Student name="Ankan Singh" tag="Artist" image="ankan.jpg"/>
       </div>
     </section>
     <Footer />
