--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -124,7 +124,7 @@ import Analytics from '@vercel/analytics/astro'
     </section>
     <section class="lead-by font-alex text-3xl w-screen flex flex-col items-center pt-20">
       <h2 class="text-[var(--darker-primary)]">Lead By</h2>
-      <StudentCard name="Class Teacher" tag="Akash Debnath Sir"/>
+      <StudentCard name="Class Teacher" tag="Akash Debnath Sir" image="akash-sir.png"/>
       <div class="grid grid-cols-2 grid-rows-3 gap-10 pt-10 md:grid-rows-2 md:grid-cols-3">
         <StudentCard name="Girls Monitor 1" tag="Sonakshi Suman" image="sonakshi.jpg"/>
         <StudentCard name="Boys Monitor 1" tag="Utkarsh Chandel" image="utkarsh.jpg"/>
