--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -36,7 +36,7 @@ import Analytics from '@vercel/analytics/astro'
           fontSize="10px"
           image="./utkarsh.jpg"
         />
-        <Student name="Aarav Kumar" tag="Artist, Vocalist" />
+        <Student name="Aarav Kumar" tag="Artist, Vocalist" image="aarav.jpg"/>
         <Student name="Prince Kumar" tag="Athlete" image="prince.jpg"/>
         <Student name="Jigar Kumar" tag="Athlete" image="jigar.jpeg" />
         <Student
