--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -124,14 +124,14 @@ import Analytics from '@vercel/analytics/astro'
     </section>
     <section class="lead-by font-alex text-3xl w-screen flex flex-col items-center pt-20">
       <h2 class="text-[var(--darker-primary)]">Lead By</h2>
-      <StudentCard name="Class Teacher" tag="Akash Debnath Sir" image="akash-sir.png"/>
+      <StudentCard name="Class Teacher" tag="Mithu Das Ma'am" image=""/>
       <div class="grid grid-cols-2 grid-rows-3 gap-10 pt-10 md:grid-rows-2 md:grid-cols-3">
-        <StudentCard name="Girls Monitor 1" tag="Sonakshi Suman" image="sonakshi.jpg"/>
-        <StudentCard name="Boys Monitor 1" tag="Utkarsh Chandel" image="utkarsh.jpg"/>
-        <StudentCard name="Girls Monitor 2" tag="Pratyusha Joshi" image="pratyusha.jpg"/>
-        <StudentCard name="Boys Monitor 2" tag="Jigar Kumar" image="jigar.jpeg"/>
+        <StudentCard name="Girls Monitor 1" tag="Srishti Mondol" image="srishti.jpg"/>
         <StudentCard name="Girls Monitor 3" tag="Adrija Mondol" image="adrija.jpg"/>
-        <StudentCard name="Boys Monitor 3" tag="Suvam Mondol" image="suvam.jpg"/>
+        <StudentCard name="Girls Monitor 2" tag="Pratyusha Joshi" image="pratyusha.jpg"/>
+        <StudentCard name="Boys Monitor 1" tag="Utkarsh Chandel" image="utkarsh.jpg"/>
+        <StudentCard name="Boys Monitor 2" tag="Prince Kumar" image="prince.jpg"/>
+        <StudentCard name="Boys Monitor 3" tag="Aarav Kumar" image="aarav.jpg"/>
 
       </div>
     </section>
