--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -24,15 +24,15 @@ import Analytics from '@vercel/analytics/astro'
     <section class="talents pt-[110px] min-h-screen pl-3">
       <h2 class="w-screen text-center">Our Talents</h2>
       <div class="grid w-screen">
-        <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Topper" image="adrija.jpg"/>
+        <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Ranker" image="adrija.jpg"/>
         <Student
           name="Pratyusha Joshi"
-          tag="Topper, Writer"
+          tag="Ranker, Writer"
           image="pratyusha.jpg"
         />
         <Student
           name="Utkarsh Chandel"
-          tag="Athlete, Topper, Poet, Musician, Devloper"
+          tag="Athlete, Ranker, Poet, Musician, Devloper"
           fontSize="10px"
           image="./utkarsh.jpg"
         />
@@ -57,7 +57,6 @@ import Analytics from '@vercel/analytics/astro'
         <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg" />
         <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.jpg" />
         <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg" />
-        <Student name="Ankan Singh" tag="Artist" image="ankan.jpg"/>
       </div>
     </section>
     <Footer />
