Poetry Update + Information Updating and Bugfies

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
     --lighter-bg:hsl(315, 80%, 99%); */
     --darker-primary:hsl(281, 76%, 13%);
     --primary-color:hsl(281, 76%, 13%);
+    --lighter-primary:hsl(282, 36%, 91%);
     --secondry-color:hsl(261, 77%, 22%);
     --background: hsl(60, 22%, 96%);
     --lighter-bg:hsl(60, 67%, 99%);
