--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,15 +1,15 @@
 <header>
   <div class="logo">
     <a href="." >
-      <img src="./logo.png" alt="" class="size-24 cursor-pointer">
+      <img src="/logo.png" alt="" class="size-24 cursor-pointer">
 
     </a>
   </div>
   <nav class=".nav">
-    <a href="./talents">Our Talents</a>
-    <a href="">Class Magazine</a>
+    <a href="/talents">Our Talents</a>
+    <a href="/poetry-corner">Poetry Corner</a>
     <a href="">Yearbook</a>
-    <a href="./student-list">Student List</a>
+    <a href="/student-list">Student List</a>
   </nav>
 </header>
 <style is:global>
@@ -28,6 +28,7 @@
     justify-content: space-evenly;
     position: fixed; 
     z-index: 5;
+    top: 0;
   }
   nav{
     display: flex;
