Couple of Bug fixes on Mobile. FIXED: Navbar not covering the whole width. FIXED: Mobile immating desktop behaviour

--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -24,6 +24,8 @@ const authorDetails: any = {"Srishti":{
 ---
 <html>
     <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>{author}</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     </head>
