--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,13 +32,13 @@ import Analytics from "@vercel/analytics/astro";
       </div>
     </section>
     <section
-      class="honor text center flex flex-col items-center w-screen pl-10"
+      class="honor text center flex flex-col items-center w-screen "
     >
-      <h2>Our Member's Achievements</h2>
+      <h2 class="text-[clamp(0px,30vw,60px)]">Our Member's Achievements</h2>
       <div class="flex flex-col w-[clamp(0px,100vw,700px)] achivements">
         <div class="flex items-center">
           <span class="text-6xl">🏓</span>
-          <span class="w-[clamp(0px,80vw,620px)]"
+          <span class="w-[clamp(0px,70vw,620px)]"
             > Best U14 girl TT player in KVS Kolkata Region:Aarushi Manna</span
           >
         </div>
