--- a/src/pages/poems/[poem].astro
+++ b/src/pages/poems/[poem].astro
@@ -116,6 +116,15 @@ kyunki mere liye toh abhi sari khusi bas tu hi hai
 };
 const current = poems[poem]
 ---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{current.title} - {current.author}</title>
+</head>
+<body>
+    
 
 <Nav />
 <main class="pt-[140px] ">
@@ -131,3 +140,5 @@ const current = poems[poem]
     font-family: "Alex brush";
   }
 </style>
+</body>
+</html>
