--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -21,7 +21,7 @@ import Analytics from '@vercel/analytics/astro'
     <Analytics/>
     <Nav />
     <LanderBG client:only />
-    <section class="talents pt-[110px] min-h-screen pl-3">
+    <section class="talents pt-[110px] min-h-screen ">
       <h2 class="w-screen text-center">Our Talents</h2>
       <div class="grid w-screen">
         <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Ranker" image="adrija.jpg"/>
