Changed the opening quote

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Analytics from "@vercel/analytics/astro";
       <div class="lander">
         <div class="heading">
           <span id="pt1" class="relative">
-            We weren’t just classmates. We were the glitch in the system.
+            Time Flies, and we are the pilots.
           </span><br />
           <span id="pt2" class="relative"> Class 8B </span>
         </div>
