--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,14 +1,16 @@
 <header>
   <div class="logo">
-    <a href="." >
-      <img src="/logo.png" alt="" class="size-24 cursor-pointer">
+    <a href="/" >
+      <img src="/logo.png" alt="" class=" max-w-24 w-[calc(1/10*100vw)] cursor-pointer">
 
     </a>
   </div>
-  <nav class=".nav">
+  <nav class="nav">
     <a href="/talents">Our Talents</a>
     <a href="/poetry-corner">Poetry Corner</a>
-    <a href="">Yearbook</a>
+    <!-- <a href="">Art Corner</a>
+    <a href="">Gallery</a> -->
+
     <a href="/student-list">Student List</a>
   </nav>
 </header>
@@ -33,7 +35,7 @@
   nav{
     display: flex;
     gap:clamp(2px,2vw,20px);
-    font-size:clamp(0px,3vw,16px);
+    font-size:clamp(0px,3.2vw,16px);
     color:var(--darker-primary);
     font-family: "Alex Brush";
 
