--- a/src/pages/poems/[poem].astro
+++ b/src/pages/poems/[poem].astro
@@ -37,7 +37,7 @@ most beautiful wave ever seen
 When I saw her
 I immediately fell in love with her`,
   },
-  ut2: {
+  ut3: {
     author: "Utkarsh Chandel",
     pic: "/utkarsh.jpg",
     title: "Doing, Doing, Doing",
@@ -57,7 +57,7 @@ we stood like a blade of grass
 doing nothing as the life pass
 "is this the life for which we really asked"`,
   },
-  ut3: {
+  ut2: {
     author: "Utkarsh Chandel",
     pic: "/utkarsh.jpg",
     title: "क्या है मन मैं तेरे?",
@@ -133,7 +133,7 @@ const current = poems[poem]
     <span class="font-alex text-xl">{current.author}</span>
   </div>
   <span class="text-4xl font-alex ml-10 ">{current.title}</span>
-  <pre class="pl-12">{current.body}</pre>
+  <pre class="pl-12 text-[clamp(0px,2vw,20px)]">{current.body}</pre>
 </main>
 <style>
   .font-alex{
