--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import Analytics from "@vercel/analytics/astro";
     <section
       class="honor text center flex flex-col items-center w-screen "
     >
-      <h2 class="text-[clamp(0px,30vw,60px)]">Our Member's Achievements</h2>
+      <h2 class="text-[clamp(0px,7vw,60px)!important]">Our Member's Achievements</h2>
       <div class="flex flex-col w-[clamp(0px,100vw,700px)] achivements">
         <div class="flex items-center">
           <span class="text-6xl">🏓</span>
@@ -264,7 +264,7 @@ import Analytics from "@vercel/analytics/astro";
       <h2 class="text-[var(--darker-primary)]">Lead By</h2>
       <StudentCard name="Class Teacher" tag="Mithu Das Ma'am" image="" />
       <div
-        class="grid grid-cols-2 grid-rows-2 gap-10 pt-10 md:grid-rows-2 md:grid-cols-2"
+        class="grid grid-cols-2 grid-rows-2 gap-[clamp(8px,4vw,40px)]  pt-10 md:grid-rows-2 md:grid-cols-2"
       >
       <StudentCard
         name="Girls Monitor 1"
