Gallery and bugfixes

--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -8,8 +8,8 @@
   <nav class="nav">
     <a href="/talents">Our Talents</a>
     <a href="/poetry-corner">Poetry Corner</a>
-    <!-- <a href="">Art Corner</a>
-    <a href="">Gallery</a> -->
+    <!-- <a href="">Art Corner</a> -->
+    <a href="/gallery">Gallery</a>
 
     <a href="/student-list">Student List</a>
   </nav>
