--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Analytics from "@vercel/analytics/astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="favicon.webp" type="image/png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Class 8B</title>
@@ -269,22 +269,22 @@ import Analytics from "@vercel/analytics/astro";
       <StudentCard
         name="Girls Monitor 1"
         tag="Pratyusha Joshi"
-        image="pratyusha.jpg"
+        image="pratyusha.webp"
       />
       <StudentCard
         name="Boys Monitor 1"
         tag="Utkarsh Chandel"
-        image="utkarsh.jpg"
+        image="utkarsh.webp"
       />
         <StudentCard
           name="Girls Monitor 2"
           tag="Kumari Vasundhara"
-          image="vasu.jpg"
+          image="vasu.webp"
         />
         <StudentCard
           name="Boys Monitor 2"
           tag="Prince Kumar"
-          image="prince.jpg"
+          image="prince.webp"
         />
       </div>
     </section>
