--- a/src/pages/poetry-corner.astro
+++ b/src/pages/poetry-corner.astro
@@ -39,9 +39,9 @@ import ClientRouter from "astro/components/ClientRouter.astro";
     <main class="pt-[130px] flex flex-col items-center">
       <h2 class="font-alex text-3xl">Poets</h2>
       <div class="poets w-screen">
-        <a href="/authors/Pratyusha"> <StudentCard name="Pratyusha Joshi" image="./pratyusha.jpg" /></a>
-        <a href="/authors/Utkarsh"><StudentCard name="Utkarsh Chandel" image="./utkarsh.jpg" /></a>
-        <a href="/authors/Srishti"><StudentCard name="Srishti Mondol" image="./srishti.jpg" /></a>
+        <a href="/authors/Pratyusha"> <StudentCard name="Pratyusha Joshi" image="./pratyusha.webp" /></a>
+        <a href="/authors/Utkarsh"><StudentCard name="Utkarsh Chandel" image="./utkarsh.webp" /></a>
+        <a href="/authors/Srishti"><StudentCard name="Srishti Mondol" image="./srishti.webp" /></a>
       </div>
       <div class="poems flex flex-col mt-10">
         <Poems client:only/>
