--- a/src/pages/talents.astro
+++ b/src/pages/talents.astro
@@ -11,7 +11,7 @@ import Analytics from '@vercel/analytics/astro'
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="favicon.webp" type="image/png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Talents - Class 8B</title>
@@ -24,39 +24,39 @@ import Analytics from '@vercel/analytics/astro'
     <section class="talents pt-[110px] min-h-screen ">
       <h2 class="w-screen text-center">Our Talents</h2>
       <div class="grid w-screen">
-        <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Ranker" image="adrija.jpg"/>
+        <Student name="Adrija Mondol" tag="Olympiad Gold Medalist, Ranker" image="adrija.webp"/>
         <Student
           name="Pratyusha Joshi"
           tag="Ranker, Writer"
-          image="pratyusha.jpg"
+          image="pratyusha.webp"
         />
         <Student
           name="Utkarsh Chandel"
           tag="Athlete, Ranker, Poet, Musician, Devloper"
           fontSize="10px"
-          image="./utkarsh.jpg"
+          image="./utkarsh.webp"
         />
-        <Student name="Aarav Kumar" tag="Artist, Vocalist" image="aarav.jpg"/>
-        <Student name="Prince Kumar" tag="Athlete" image="prince.jpg"/>
-        <Student name="Jigar Kumar" tag="Athlete" image="jigar.jpeg" />
+        <Student name="Aarav Kumar" tag="Artist, Vocalist" image="aarav.webp"/>
+        <Student name="Prince Kumar" tag="Athlete" image="prince.webp"/>
+        <Student name="Jigar Kumar" tag="Athlete" image="jigar.webp" />
         <Student
           name="Surjosnata Sinha Roy"
           tag="Poet, Editor"
-          image="./surjo.jpg"
+          image="./surjo.webp"
         />
         <Student
           name="Srishti Mondol"
           tag="Artist, Editor, Poet"
-          image="./srishti.jpg"
+          image="./srishti.webp"
         />
         <Student
           name="Sutanwika Das"
           tag="Artist, Yogini"
-          image="./sutanwika.jpg"
+          image="./sutanwika.webp"
         />
-        <Student name="Manvi Shaw" tag="Athlete" image="./manvi.jpg" />
-        <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.jpg" />
-        <Student name="Hanny Mahli" tag="Singer" image="hanny.jpg" />
+        <Student name="Manvi Shaw" tag="Athlete" image="./manvi.webp" />
+        <Student name="Suvam Mondol" tag="Artist, Musician" image="suvam.webp" />
+        <Student name="Hanny Mahli" tag="Singer" image="hanny.webp" />
       </div>
     </section>
     <Footer />
