Added more photos in gallery and polished gallery

--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -13,13 +13,13 @@ export function getStaticPaths() {
 const { author } = Astro.params;
 const authorDetails: any = {"Srishti":{
     name:"Srishti Mondol",
-    pic:"/srishti.jpg"
+    pic:"/srishti.webp"
 },"Utkarsh":{
     name:"Utkarsh Chandel",
-    pic:"/utkarsh.jpg"
+    pic:"/utkarsh.webp"
 },"Pratyusha":{
     name:"Pratyusha Joshi",
-    pic:"/pratyusha.jpg"
+    pic:"/pratyusha.webp"
 }}
 ---
 <html>
