--- a/src/pages/poems/[poem].astro
+++ b/src/pages/poems/[poem].astro
@@ -13,7 +13,7 @@ const { poem } = Astro.params;
 const poems:any = {
   ut1: {
     author: "Utkarsh Chandel",
-    pic: "/utkarsh.jpg",
+    pic: "/utkarsh.webp",
     title: "When I saw her",
     body: `When I saw her,
 for the first time in my life
@@ -39,7 +39,7 @@ I immediately fell in love with her`,
   },
   ut3: {
     author: "Utkarsh Chandel",
-    pic: "/utkarsh.jpg",
+    pic: "/utkarsh.webp",
     title: "Doing, Doing, Doing",
     body: `Doing, Doing, Doing, 
 things on repeat
@@ -59,7 +59,7 @@ doing nothing as the life pass
   },
   ut2: {
     author: "Utkarsh Chandel",
-    pic: "/utkarsh.jpg",
+    pic: "/utkarsh.webp",
     title: "क्या है मन मैं तेरे?",
     body: `हाट में है बाजार लगे
 गलियों में सजे नज़ारे
@@ -83,7 +83,7 @@ doing nothing as the life pass
   },
   st1: {
     author: "Srishti Mondol",
-    pic: "/srishti.jpg",
+    pic: "/srishti.webp",
     title: "Aaj bhi",
     body: `Aaj bhi yaad aati hai vo din ki, jab pehli bar
 Tujhe uss chote se taron Jaisi jhund mein
