--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,3 +30,24 @@ html{
 a{
     cursor:pointer;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(0deg,transparent,var(--darker-primary),transparent);
+  border-radius: 10px;
+
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--lighter-primary);
+}
