--- a/src/pages/student-list.astro
+++ b/src/pages/student-list.astro
@@ -1,40 +1,95 @@
 ---
-import Nav from "../components/nav.astro"
-import Footer from "../components/footer.astro"
-const studentList = ["Aarushi Manna","Aayan Ahemad","Abhishek Kumar Chaurasia","Aditya Shaw","Adrija Mondol","Aishi Kundu","Amit Kumar","Anik Mondol","Anisa Mallik","Ankan Singh","Ansh Kumar","Anushka Ram","Anushka Rabidas","Ashmita Dutta","Hanny Mahli","Jigar Kumar","Kumari Vasundhra","Mainak Kundu","Monami Mondol","Manvi Shaw","Nishu Kumari","Pratishtha Gupta","Pratyusha Joshi","Preetipadma Mahanta","Ramit Bose","Riddhiman","Sammeran Ghosh","Sanjana Das","Sanjhbati Chakroborty","Sargam Jena","Sarthak Singh","Sayantan Ghosh","Smarta Naskar","Sonakshi Suman","Srabani Behra","Srijan Mondol","Srishti Mondol","Surjosnata Sinha Roy","Sutanwika Das","Suvam Mondol","Swapneel Ghosh","Trishan Majumdar","Ushasree Mahanta","Vibhor Dave","Vinayak Prasad Shaw","Roddur Bandhu","Chandrasnata Paul","Briti Majumdar","Prince Kumar","Utkarsh Chandel","Aarav Kumar"]
-import { ClientRouter } from 'astro:transitions';
-import Analytics from '@vercel/analytics/astro'
+import Nav from "../components/nav.astro";
+import Footer from "../components/footer.astro";
+const studentList = [
+  "Aarav Kumar",
+  "Aarushi Manna",
+  "Aayan Ahemad",
+  "Abhishek Kumar Chaurasia",
+  "Aditya Shaw",
+  "Adrija Mondol",
+  "Aishi Kundu",
+  "Amit Kumar",
+  "Anik Mondol",
+  "Anisa Mallik",
+  "Ankan Singh",
+  "Ansh Kumar",
+  "Anushka Rabidas",
+  "Anushka Ram",
+  "Ashmita Dutta",
+  "Briti Majumdar",
+  "Chandrasnata Paul",
+  "Hanny Mahli",
+  "Jigar Kumar",
+  "Kumari Vasundhra",
+  "Mainak Kundu",
+  "Manvi Shaw",
+  "Monami Mondol",
+  "Nishu Kumari",
+  "Pratishtha Gupta",
+  "Pratyusha Joshi",
+  "Preetipadma Mahanta",
+  "Prince Kumar",
+  "Ramit Bose",
+  "Riddhiman",
+  "Roddur Bandhu",
+  "Sammeran Ghosh",
+  "Sanjana Das",
+  "Sanjhbati Chakroborty",
+  "Sargam Jena",
+  "Sarthak Singh",
+  "Sayantan Ghosh",
+  "Smarta Naskar",
+  "Sonakshi Suman",
+  "Srabani Behra",
+  "Srijan Mondol",
+  "Srishti Mondol",
+  "Surjosnata Sinha Roy",
+  "Sutanwika Das",
+  "Suvam Mondol",
+  "Swapneel Ghosh",
+  "Trishan Majumdar",
+  "Ushasree Mahanta",
+  "Utkarsh Chandel",
+  "Vibhor Dave",
+  "Vinayak Prasad Shaw"
+]
+import { ClientRouter } from "astro:transitions";
+import Analytics from "@vercel/analytics/astro";
 ---
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student List - Class 8B</title>
-    <ClientRouter transition:name="fade"/>
-</head>
-<body>
-    <Analytics/>
-    <Nav/>
+    <ClientRouter transition:name="fade" />
+  </head>
+  <body>
+    <Analytics />
+    <Nav />
     <section class="w-screen pt-[130px] pl-10">
-        <ol>
-            {
-                studentList.map((data,i) => <li>{i+1}. {data}</li>)
-            }
-            
-        </ol>
+      <ol>
+        {
+          studentList.map((data, i) => (
+            <li>
+              {i + 1}. {data}
+            </li>
+          ))
+        }
+      </ol>
     </section>
-    <Footer/>
-</body>
-<style>
-    html{
-        padding: 0;
+    <Footer />
+  </body><style>
+    html {
+      padding: 0;
     }
-    body{
-        margin: 0px;
-        padding: 0px;
-        height: 100vh;
-        width: 100vw;
+    body {
+      margin: 0px;
+      padding: 0px;
+      height: 100vh;
+      width: 100vw;
     }
-</style>
+  </style>
 </html>
